Fixed patient registration

--- a/forgot-password.html
+++ b/forgot-password.html
@@ -38,14 +38,14 @@
                                                         Please enter you email address and role. 
                                                     </p>
                                                     <form action="reset-password.php" method="POST">
-                                                        <input type="email" name="email" placeholder="Enter Email" required style="border-color:#20e277;text-decoration:none !important; font-weight:500; margin-top:35px; text-transform:uppercase; font-size:14px;padding:10px 24px;display:inline-block;border-radius:50px;">
-                                                        <select name="role" required style="border-color:#20e277;text-decoration:none !important; font-weight:500; margin-top:35px; text-transform:uppercase; font-size:14px;padding:10px 24px;display:inline-block;border-radius:50px;">
+                                                        <input type="email" name="email" placeholder="Enter Email" required style="border-color:#20e277;text-decoration:none !important; font-weight:500; margin-top:35px; font-size:14px;padding:10px 24px;display:inline-block;border-radius:50px;">
+                                                        <select name="role" required style="border-color:#20e277;text-decoration:none !important; font-weight:500; margin-top:35px; font-size:14px;padding:10px 24px;display:inline-block;border-radius:50px;">
                                                             <option value="patient">Patient</option>
                                                             <option value="doctor">Doctor</option>
                                                             <option value="receptionist">Receptionist</option>
                                                         </select>
                                                         <br>
-                                                        <input type="submit" style="background:#20e277;text-decoration:none !important; font-weight:500; margin-top:35px; color:#fff;text-transform:uppercase; font-size:14px;padding:10px 24px;display:inline-block;border-radius:50px; border:0" value="Send OTP">
+                                                        <input type="submit" style="background:#20e277;text-decoration:none !important; font-weight:500; margin-top:35px; color:#fff; font-size:14px;padding:10px 24px;display:inline-block;border-radius:50px; border:0" value="Send OTP">
                                                     </form>
                                                 </td>
                                             </tr>
